# rune

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  premake5.lua
rune/: CMakeLists.txt  premake5.lua
rune-scriptcore/: premake5.lua
rune-scriptcore/Source/: Entity.cs  Input.cs  InternalCalls.cs  Keycode.cs  MathTypes.cs  Player.cs
rune/cmake/: PlatformDetection.cmake
rune/include/: pch.hpp  rune.hpp
rune/include/rune/: defines.hpp  init.hpp  macros.hpp  pch.hpp
rune/include/rune/assets/: asset.hpp  asset_factory.hpp  asset_registry.hpp
rune/include/rune/core/: config.hpp  log.hpp  time.hpp  window.hpp
rune/include/rune/events/: events.hpp  events_types.hpp
rune/include/rune/graphics/: graphics.hpp  material.hpp  mesh.hpp  shader.hpp  shader_reflection.hpp  texture.hpp  vertex.hpp
rune/include/rune/input/: input.hpp  input_keys.hpp
rune/include/rune/maths/: random.hpp
rune/include/rune/scene/: components.hpp  entity.hpp  scene.hpp  scene_manager.hpp
rune/include/rune/scripting/: script_engine.hpp  script_glue.hpp
rune/include/rune/systems/: config.hpp  window.hpp
rune/include/rune/systems/assets/: asset.hpp  asset_factory.hpp  asset_registry.hpp
rune/include/rune/systems/events/: events.hpp  events_types.hpp
rune/include/rune/systems/graphics/: graphics.hpp  mesh.hpp  texture.hpp
rune/include/rune/utility/: buffer.hpp  callback.hpp  guid.hpp  storage.hpp
rune/lib/assimp/: premake5.lua
rune/lib/assimp/lib/: assimp-vc143-mt.exp  assimp-vc143-mt.lib  assimp-vc143-mtd.exp  assimp-vc143-mtd.lib
rune/lib/entt/: premake5.lua
rune/lib/glad/: premake5.lua
rune/lib/glad/include/glad/: glad.h
rune/lib/glad/src/: glad.c
rune/lib/glfw/: premake5.lua
rune/lib/glm/: premake5.lua
rune/lib/mono/: CMakeLists.txt  premake5.lua
rune/lib/mono/lib/Debug/: MonoPosixHelper.exp  eglib.lib  libgcmonosgen.lib  libmonoutils.lib  mono-2.0-sgen.exp  mono-2.0-sgen.lib
rune/lib/mono/lib/Release/: MonoPosixHelper.exp  eglib.lib  libgcmonosgen.lib  libmonoutils.lib  mono-2.0-sgen.exp  mono-2.0-sgen.lib
rune/lib/spdlog/: premake5.lua
rune/lib/spirv_reflect/: CMakeLists.txt  premake5.lua
rune/lib/stb/: premake5.lua
rune/lib/tomlplusplus/: premake5.lua
rune/src/: init.cpp  log.cpp  pch.cpp
rune/src/assets/: asset.cpp  asset_factory.cpp  asset_registry.cpp
rune/src/core/: config.cpp  log.cpp  window.cpp
rune/src/events/: events.cpp
rune/src/graphics/: graphics.cpp  material.cpp  mesh.cpp  renderer.hpp  scene_renderer.cpp  scene_renderer.hpp  shader.cpp  texture.cpp
rune/src/input/: input.cpp
rune/src/maths/: random.cpp
rune/src/platform/apple/: sample.cpp
rune/src/platform/linux/: sample.cpp
rune/src/platform/opengl/: renderer.cpp  renderer.hpp  shader_reflection.cpp
rune/src/platform/vulkan/: renderer_vulkan.cpp  vulkan_core.cpp  vulkan_core.hpp  vulkan_utils.cpp  vulkan_utils.hpp
rune/src/platform/windows/: graphics.cpp  renderer_opengl.cpp  renderer_opengl.hpp  sample.cpp  time.cpp
rune/src/scene/: components.cpp  entity.cpp  scene.cpp  scene_manager.cpp
rune/src/scripting/: script_engine.cpp  script_glue.cpp
rune/src/systems/: config.cpp  log.cpp  window.cpp
rune/src/systems/assets/: asset.cpp  asset_factory.cpp  asset_registry.cpp
rune/src/systems/events/: events.cpp
rune/src/systems/graphics/: graphics.cpp  mesh.cpp  texture.cpp
rune/src/utility/: buffer.cpp  guid.cpp
rune_scriptcore/: Rune-ScriptCore.csproj  Rune-ScriptCore.sln
rune_scriptcore/Source/: Entity.cs  main.cs
sandbox/: CMakeLists.txt  premake5.lua
sandbox/assets/: default.frag  default.frag.spv  default.shader  default.vert  default.vert.spv
sandbox/assets/models/: test_scene.fbx
sandbox/assets/models/pyramid/: pyramid.fbx
sandbox/assets/shaders/: flat_color.frag  flat_color.frag.spv  flat_color.shader  flat_color.vert  flat_color.vert.spv
sandbox/config/: engine.toml
sandbox/src/: main.cpp
